# OpendTect-Plugins

./: .gitignore  .gitmodules  CHANGES.MD  CHANGES.html  CITATION.cff  CMakeLists.txt  CMakeUserPresets.json  README.MD  README.html  README.md  README.rst  VERSION.txt  wmplugins_version.h.in
Colorbars/: README.MD  settings_coltabs
ExternalAttrib_Examples/: ex_dip_attribute.py  ex_get_cvals.py  ex_get_dip.py  ex_get_eigenvals.py  ex_lowpass_filter.py  ex_lowpass_filter_multi.py  ex_lpa_coef.py  ex_lpa_curvature.py  ex_lpa_cvals.py  ex_lpa_dip.py  ex_lpa_eigenvals.py  ex_lpa_eigenvec.py  ex_lpa_smooth.py  ex_lpa_smooth_scipy.py  ex_lpa_smooth_single.py  ex_multi_attribute_multi_trace_test.py  ex_multi_attribute_single_trace_test.py  ex_prewitt_filter.py  ex_python_attribute.py  extattrib.py
data/Python/: wmplugins_requirements.txt
doc/: RSpecAttrib.html  RSpecAttrib.rst
include/Basic/: svnversion.h
plugins/AVOAttrib/: CMakeLists.txt  avoattrib.cc  avoattrib.h  avoattribpi.cc
plugins/AVOPolarAttrib/: CMakeLists.txt  avopolarattrib.cc  avopolarattrib.h  avopolarattribpi.cc
plugins/EFDAttrib/: CMakeLists.txt  efdattribpi.cc  efdmodesattrib.cc  efdmodesattrib.h  efdspectrumattrib.cc  efdspectrumattrib.h
plugins/EigenTools/: CMakeLists.txt  efd.cc  efd.h  eigenderiv.h  eigenfilt.h  eigentools.h  eigentoolspi.cc  vmd.cc  vmd.h  windowedops_eigen.h
plugins/ExternalAttrib/: CMakeLists.txt  externalattrib.cc  externalattrib.h  externalattribpi.cc  extproc.cc  extproc.h  json.cpp  procinst.cc  procinst.h  wmparamsetget.h
plugins/GradientAttrib/: CMakeLists.txt  gradientattrib.cc  gradientattrib.h  gradientattribpi.cc
plugins/LTFAttrib/: CMakeLists.txt  ltfattrib.cc  ltfattrib.h  ltfattribpi.cc
plugins/LocalAttrib/: CMakeLists.txt  localattribpi.cc  ltfattrib.cc  ltfattrib.h  rsflib.cc  rsflib.h
plugins/MLVFilterAttrib/: CMakeLists.txt  mlvfilterattrib.cc  mlvfilterattrib.h  mlvfilterattribpi.cc  point3D.h  statcalc.h
plugins/Mistie/: CMakeLists.txt  mistieapplier.cc  mistieapplier.h  mistieapplytohorizon.cc  mistieapplytohorizon.h  mistiecordata.cc  mistiecordata.h  mistiedata.cc  mistiedata.h  mistieestimator.cc  mistieestimator.h  mistieestimator2d3d.cc  mistieestimator2d3d.h  mistiepi.cc  phaseangle.h  trcanalysis.cc  trcanalysis.h
plugins/NoRelease/: README.MD
plugins/NoRelease/AVOPolar/: CMakeLists.txt  avopolar.cc  avopolar.h  avopolarpi.cc  windowedops.h  windowedops_eigen.h
plugins/NoRelease/uiAVOPolar/: CMakeLists.txt  uiavopolar.cc  uiavopolar.h  uiavopolarpi.cc
plugins/PythonBindings/: CMakeLists.txt  test.cc
plugins/RSpecAttrib/: CMakeLists.txt  mymath.h  rspecattrib.cc  rspecattrib.h  rspecattribpi.cc
plugins/Skeletons/: README.MD
plugins/VMDAttrib/: CMakeLists.txt  vmd.cc  vmd.h  vmdattribpi.cc  vmdspectrumattrib.cc  vmdspectrumattrib.h
plugins/uiAVOAttrib/: CMakeLists.txt  uiavoattrib.cc  uiavoattrib.h  uiavoattribpi.cc
plugins/uiAVOPolarAttrib/: CMakeLists.txt  uiavopolarattrib.cc  uiavopolarattrib.h  uiavopolarattribpi.cc
plugins/uiDataExtentHorizon/: CMakeLists.txt  uidataextenthorizonpi.cc  uidehmainwin.cc  uidehmainwin.h  uiseis2dlineselgrp.cc
plugins/uiEFDAttrib/: CMakeLists.txt  uiefdattribpi.cc  uiefdmodesattrib.cc  uiefdmodesattrib.h  uiefdspectrumattrib.cc  uiefdspectrumattrib.h
plugins/uiExternalAttrib/: CMakeLists.txt  uiext_stepoutsel.h  uiexternalattrib.cc  uiexternalattrib.h  uiexternalattribpi.cc
plugins/uiGeopackageExport/: CMakeLists.txt  ui2dlinesgrp.cc  ui2dlinesgrp.h  uigeopackageexportmainwin.cc  uigeopackageexportmainwin.h  uigeopackageexportpi.cc  uigeopackagereader.cc  uigeopackagereader.h  uigeopackagetreeitem.cc  uigeopackagetreeitem.h  uigeopackagewriter.cc  uigeopackagewriter.h  uigeotiffexportmainwin.cc  uigeotiffexportmainwin.h  uigeotiffwriter.cc  uigeotiffwriter.h  uihorizongrp.cc  uihorizongrp.h  uipolylinesgrp.cc  uipolylinesgrp.h  uirandomlinesgrp.cc  uirandomlinesgrp.h  uiseis2dlineselgrp.h  uisurveygrp.cc  uisurveygrp.h  uiwellsgrp.cc  uiwellsgrp.h
plugins/uiGradientAttrib/: CMakeLists.txt  uigradientattrib.cc  uigradientattrib.h  uigradientattribpi.cc
plugins/uiGrid2D3DHorizon/: CMakeLists.txt  idwgridder2d.cc  idwgridder2d.h  kdbush.h  ltpsgridder2d.cc  ltpsgridder2d.h  mbagridder2d.cc  mbagridder2d.h  msmbagridder2d.cc  msmbagridder2d.h  nrngridder2d.cc  nrngridder2d.h  rbfgridder2d.cc  rbfgridder2d.h  uigrid2d3dhorizonmainwin.cc  uigrid2d3dhorizonmainwin.h  uigrid2d3dhorizonpi.cc  uigridgrp.cc  uigridgrp.h  uiinputgrp.cc  uiinputgrp.h  uiwmhorsavefieldgrp.cc  uiwmhorsavefieldgrp.h  wmgridder2d.cc  wmgridder2d.h  wmsimplify3d.h
plugins/uiLTFAttrib/: CMakeLists.txt  uiltfattrib.cc  uiltfattrib.h  uiltfattribpi.cc
plugins/uiLocalAttrib/: CMakeLists.txt  uilocalattribpi.cc  uiltfattrib.cc  uiltfattrib.h
plugins/uiMLVFilterAttrib/: CMakeLists.txt  uimlvfilterattrib.cc  uimlvfilterattrib.h  uimlvfilterattribpi.cc
plugins/uiMistie/: CMakeLists.txt  mistie_report_template.in  mistiedata.cc  mistiedata.h  mistieestimator.cc  mistieestimator.h  uicorrviewer.cc  uicorrviewer.h  uimistieanalysismainwin.cc  uimistieanalysismainwin.h  uimistieapplier.cc  uimistieapplier.h  uimistiecorrhordlg.cc  uimistiecorrhordlg.h  uimistiecorrmainwin.cc  uimistiecorrmainwin.h  uimistieestimatemainwin.cc  uimistieestimatemainwin.h  uimistiepi.cc
plugins/uiRSpecAttrib/: CMakeLists.txt  uirspecattrib.cc  uirspecattrib.h  uirspecattribpi.cc
plugins/uiVMDAttrib/: CMakeLists.txt  uivmdattribpi.cc  uivmdspectrumattrib.cc  uivmdspectrumattrib.h
python_bindings/: CMakeLists.txt
python_bindings/Examples/: wmodpy_demo.ipynb  wmodpy_horizons.ipynb  wmodpy_survey.ipynb  wmodpy_wells.ipynb
python_bindings/Testing/: wmodpy_demo_linux.ipynb  wmodpy_demo_win.ipynb  wmodpy_horizons_linux.ipynb  wmodpy_horizons_win.ipynb  wmodpy_survey_linux.ipynb  wmodpy_survey_win.ipynb  wmodpy_wells_linux.ipynb  wmodpy_wells_win.ipynb
python_bindings/tests/: test_wmodpy.py
python_bindings/wmodpy/: wmodpy.cc  wmodpy_horizons.cc  wmodpy_horizons.h  wmodpy_survey.cc  wmodpy_survey.h  wmodpy_wells.cc  wmodpy_wells.h
(+73 files in other folders)
