SET(OD_MODULE_DEPS AttributeEngine)
SET(OD_IS_PLUGIN yes)
SET(OD_MODULE_SOURCES
    avopolarpi.cc
    avopolar.cc
)
find_package(ArrayFire)
list( APPEND OD_MODULE_INCLUDESYSPATH ${ArrayFire_INCLUDE_DIRS} )
list( APPEND OD_MODULE_EXTERNAL_LIBS ${ArrayFire_Unified_LIBRARIES} )

find_package(Eigen3)
list( APPEND OD_MODULE_INCLUDESYSPATH ${EIGEN3_INCLUDE_DIR} )
add_definitions( -DNDEBUG )
    
SET( OD_PLUGIN_ALO_EXEC ${OD_ATTRIB_EXECS} ${OD_VOLUME_EXECS} )
OD_INIT_MODULE()
